# libsbml-draw

./: .coverage  .gitignore  .travis.yml  BaseWORDs_8h_source.html  CMakeLists.txt  CMakeLists_linux.txt  Debug_8hpp_source.html  DefaultBool_8hpp_source.html  LICENSE  README.md  SagittariusAssert_8h_source.html  SagittariusCommon_8h.html  SagittariusCommon_8h_source.html  SagittariusConfigure_8h_source.html  SagittariusCore_8h.html  SagittariusCore_8h_source.html  SagittariusException_8hpp_source.html  SagittariusPlatformWin_8h_source.html  SagittariusPlatform_8h.html  SagittariusPlatform_8h_source.html  SagittariusPrefetch_8h_source.html  UserConfigLinux.txt  UserConfigWin.txt  allen_8h.html  allen_8h_source.html  annotated.html  arrowhead_8cpp.html  arrowhead_8h.html  arrowhead_8h_source.html  autolayoutSBML_8h_source.html  autolayoutc__api_8h_source.html  box_8h.html  box_8h_source.html  canvas_8h.html  canvas_8h_source.html  classLibsbmlDraw_1_1AccessViolationException-members.html  classLibsbmlDraw_1_1AccessViolationException.html  classLibsbmlDraw_1_1BoundsCheckFailure-members.html  classLibsbmlDraw_1_1BoundsCheckFailure.html  classLibsbmlDraw_1_1Exception-members.html  (+161 more)
.github/workflows/: pythonapp.yml
Extras/code_examples/: Schmierer2008.xml  draw_network.py  element_tree.py  fancyArrowExample_filled.py  gen-rand-network-test.py  latex_lists  latex_tables  model_copasi.py  randMANetGen.py  random_network_5s_4r.xml  render.py  sbml_layout.py  sbnwPython.py  sbnw_c_api.py  stylesheet.py  try_draw_network_no_axes.py  x.py
Extras/data/: BIOMD0000000393_url.xml  GlycolysisOriginal_L3V1.xml  LineEnding_styles.xml  MODEL1202170000_url.xml  MODEL1209260000_url.xml  complicated_nodes-L3V1.xml  complicated_nodes.xml  copasi.xml  glycolysis_BIOMD176-L3V1.xml  layout.xml  model.xml  model_out_wo_styleids_ids_fixed_types.xml  model_with_layout_write_again.xml  modexmp.xml  random_network_12s_12r.xml  random_network_5s_6r.xml  random_network_5s_8r.xml  render-stylesheet_global_v2.xml  repressilator_BIOMD12-L3V1.xml  repressilator_BIOMD12.xml  simple-L2-render-global_L3V1.xml  simple-L2-render-local-L3V1-fixed.xml  test_larger_pathway.xml  test_layout_override.xml
Extras/demos/: SBGNstyles.xml  demo.py  demo_GlycolysisOriginal.py  demo_TCA_ecoli_glucose.py  demo_biomodels.py  demo_borisEJB.py  demo_c_api.py  demo_compartment_padding.py  demo_compartments.py  demo_compartments_local.py  demo_complicated_nodes.py  demo_complicated_nodes_out_antimony.py  demo_copasi.ipynb  demo_copasi.py  demo_glycolysis_bm12.py  demo_largerpathway.ipynb  demo_largerpathway.py  demo_libsbml.py  demo_libsbml_constants.py  demo_loadSBML.py  demo_loadSource.py  demo_local_render.py  demo_mac.py  demo_mac_c_api.py  demo_matplotlib.py  demo_matplotlib_font_patches.py  demo_matplotlib_line_ending.py  demo_matplotlib_margins.py  demo_matplotlib_transform.py  demo_medium_models.py  demo_model.ipynb  demo_model.py  demo_model_restricted_access.py  demo_model_simple.py  demo_modexmpl.py  demo_new_fcns.py  demo_node_size.py  demo_points.py  demo_regenerateLayout.py  demo_render.py  (+8 more)
code_examples/: computeFigureSize.py  convertLayout.py  draw_network.py  element_tree.py  enum_practice.py  gen-rand-network-test.py  glycolysis.py  sbml_layout.py  sbnwPython.py  sbnw_c_api.py  stylesheet.py  try_fancyplot.py  x.py
demos/: SBGNstyles.xml  complicated_nodes_out.xml  copasi_video.xml  demo.py  demo_GlycolysisOriginal.py  demo_TCA_ecoli_glucose.py  demo_biomodels.py  demo_borisEJB.py  demo_c_api.py  demo_compartment_padding.py  demo_compartments.py  demo_compartments_local.py  demo_complicated_nodes.py  demo_complicated_nodes_out_antimony.py  demo_copasi.py  demo_glycolysis_bm12.py  demo_images_pillow.py  demo_largerpathway.ipynb  demo_largerpathway.py  demo_libsbml_constants.py  demo_loadSBML.py  demo_loadSource.py  demo_local_render.py  demo_mac.py  demo_matplotlib  demo_matplotlib_font_patches.py  demo_matplotlib_linear_gradient.py  demo_matplotlib_margins.py  demo_matplotlib_polygon.py  demo_matplotlib_shapes.py  demo_matplotlib_transform.py  demo_medium_models.py  demo_model.ipynb  demo_model.py  demo_model_restricted_access.py  demo_model_simple.py  demo_modexmpl.py  demo_node_size.py  demo_render.py  demo_render_info_stream.py  (+15 more)
docs/: .coverage  Makefile  make.bat
doxy/: doxy.cfg
install_notes/: build_libsbml  build_libsbml_windows
manuscript/: bioinfo.cls  document.bib  document.tex  libsbml_draw.tex  pyfab-boris-vector.eps  pyfab-jana-wolf-vector.eps
model_files/: largerpathway.xml  layout.xml  model.xml  model_with_layout_write_again.xml  modexmp.xml  render_sbml.xml  x.py
poster/: portrait.tex  uioposter.cls
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  (+28 more)
src/cpp/: box.cpp  (+21 more)
tests/: BIOMD0000000001.xml  BIOMD0000000096.xml  BIOMD0000000112.xml  __init__.py  add_to_path.py  convert_sbml.py  f.xml  gen-rand-network-test.py  high_level_tests.py  model.cps  model.xml  model_strings.py  mtest_TCA_model.py  mtest_antimony_model.py  mtest_biomodels_alzheimers.py  mtest_biomodels_plant_metabolism.py  mtest_biomodels_rabies_china.py  mtest_complicated_nodes.py  mtest_font_size_api.py  mtest_fr_alg_options.py  mtest_glycolysis_orig.py  mtest_larger_pathway.xml  mtest_layout_boris.py  mtest_layout_override.py  mtest_layout_specified.py  mtest_line_endings.py  mtest_load_separately.py  mtest_no_layout.py  mtest_no_layout.xml  mtest_no_layout_alias.py  mtest_no_layout_alias.xml  mtest_no_layout_read_back_in.xml  mtest_random_generated_nw.py  mtest_render_input.py  network_tests.py  randMANetGen.py  random_model.xml  random_network.xml  render_tests.py  reproducing_issueXX.py  (+34 more)
(+165 files in other folders)
